# ruitl

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE-APACHE  LICENSE-MIT  README.md  TEMPLATE_COMPILATION.md  build.rs  debug_parser  ruitl.toml
benches/: codegen.rs  compile_dir.rs  parser.rs  render.rs
examples/: README.md  advanced_features_demo.rs  basic_usage.rs  hello_world.rs  html_output_demo.rs  server_integration.rs  streaming_demo.rs  template_compiler_demo.rs
examples/demo_templates/: DemoButton.ruitl  DemoButton_ruitl.rs  DemoUserCard.ruitl  DemoUserCard_ruitl.rs  mod.rs
examples/syntax_showcase/: Button.ruitl  UserCard.ruitl
examples/templates/: Button.ruitl  UserCard.ruitl
generated-cli/: AdvancedFeatures.rs  Hello.rs  SimpleIf.rs  UserCard.rs
generated-cli-v2/: AdvancedFeatures.rs  Button.rs  Hello.rs  SimpleIf.rs  UserCard.rs  mod.rs
generated-cli-v3/: SimpleIf.rs  mod.rs
output/: basic_demo.html  composition_demo.html  conditional_demo.html  index.html
ruitl_compiler/: Cargo.toml  README.md
ruitl_compiler/src/: codegen.rs  error.rs  format.rs  lib.rs  parser.rs  suggest.rs
ruitl_compiler/tests/: parser_edge_cases.rs
ruitl_lsp/: Cargo.toml  README.md
ruitl_lsp/src/: lib.rs  main.rs
ruitl_lsp/tests/: stdio_roundtrip.rs
ruitl_macros/: Cargo.toml
ruitl_macros/src/: lib.rs
src/: build.rs  cli.rs  codegen.rs  component.rs  config.rs  dev.rs  error.rs  generated.rs  html.rs  lib.rs  macros.rs  main.rs  parser.rs  render.rs  router.rs  server.rs  static_gen.rs  template.rs  testing.rs
templates/: AdvancedFeatures.ruitl  AdvancedFeatures_ruitl.rs  Button.ruitl  Button_ruitl.rs  Hello.ruitl  Hello_ruitl.rs  SimpleIf.ruitl  SimpleIf_ruitl.rs  UserCard_ruitl.rs  mod.rs
test-dev/: Cargo.toml  README.md  ruitl.toml
test-dev/src/: main.rs
test-dev/src/components/: hello_world.rs
test-dev/src/pages/: index.rs
test-dev/templates/: base.html
tests/: cli_generated_code_test.rs  codegen_snapshots.rs  component_composition.rs  error_suggestions.rs  parser_debug.rs  scaffold_test.rs  template_compilation.rs  testing_helpers_test.rs
tests/fixtures/composition/: CardWithChildren.ruitl  UserCard.ruitl  UserList.ruitl
tests/fixtures/errors/: typo_component.ruitl  typo_prop.ruitl
tests/fixtures/snapshots/: children.ruitl  composition.ruitl  conditionals.ruitl  generics.ruitl  loops.ruitl  match_arms.ruitl  props_only.ruitl
tests/snapshots/: codegen_snapshots__children.snap  codegen_snapshots__composition.snap  codegen_snapshots__conditionals.snap  codegen_snapshots__generics.snap  codegen_snapshots__loops.snap  codegen_snapshots__match_arms.snap  codegen_snapshots__props_only.snap
tree-sitter-ruitl/: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-ruitl/bindings/c/: tree-sitter-ruitl.h  tree-sitter-ruitl.pc.in
tree-sitter-ruitl/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-ruitl/bindings/node/: binding.cc
tree-sitter-ruitl/bindings/python/tree_sitter_ruitl/: __init__.py  binding.c
tree-sitter-ruitl/bindings/rust/: build.rs  lib.rs
tree-sitter-ruitl/src/: grammar.json  node-types.json  parser.c
tree-sitter-ruitl/test/corpus/: component.txt  composition.txt  ruitl.txt
vscode-extension-ruitl/: README.md  language-configuration.json  package.json
vscode-extension-ruitl/src/: extension.js
vscode-extension-ruitl/syntaxes/: ruitl.tmLanguage.json
zed-extension-ruitl/: .gitignore  Cargo.toml  README.md  extension.toml
zed-extension-ruitl/languages/ruitl/: config.toml  highlights.scm  injections.scm
zed-extension-ruitl/src/: ruitl.rs
