[package]
name = "ruitl_compiler"
version = "0.2.1"
edition = "2021"
description = "Parser and code generator for the RUITL (Rust UI Template Language)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sirhco/ruitl"
documentation = "https://docs.rs/ruitl_compiler"
readme = "README.md"
keywords = ["html", "template", "codegen", "parser", "templ"]
categories = ["compilers", "template-engine", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "ruitl_compiler"
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0"
walkdir = "2.3"
md5 = "0.7"
strsim = "0.11"
rayon = { version = "1.10", optional = true }

[features]
default = ["parallel"]
# `parallel` switches `compile_dir_sibling` to a rayon-backed par_iter. Each
# file writes to a distinct output path so there is no contention; disabling
# this feature keeps compile order strictly sequential (useful when profiling
# the single-thread path or on hosts that don't love rayon).
parallel = ["dep:rayon"]
