[package]
name = "ruitl_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for RUITL (Rust UI Template Language)"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
